mvp of events section with adjusted photos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<h2 class="press-light">Beaver Creek, Colorado</h2>
 
 		<section id="story">
+			<img src="img/russellrenee.jpg" class="us">
 			<h4>Our Story</h4>
 			<p class="justify">Our story begins in 2010 in a little hair salon in the Lincoln Park neighborhood of Chicago where Renee was working with Sara, Russell’s stepmom. Sara often talked to Renee about Russell, her hilarious and smart stepson who lived in Michigan. Finally, Renee’s interest was peaked, and she decided to send Russell a Facebook message. Over the next few months, Renee and Russell traveled between Michigan and Illinois, and eventually, Russell moved back to his hometown of Chicago. Russell and Renee moved in to a charming little Wicker Park apartment in May of 2012. On Friday, August 30, 2013, Russell and Renee got engaged! After much discussion and exploration, we decided to make Colorado our new home and moved to Broomfield in April of 2014. We are so excited for our future together and can’t wait to share our special day with you!</p>
 		</section>	
@@ -101,7 +102,8 @@
 					</ol>
 				</div>
 				<img src="img/christielodge.jpg" class="venue pull">
-				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. Check back later for more details.</p>
+				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. We are still working on the details, but we will definitely have catering from a local restaurant, board games, and of course, some libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives. This will likely start around 7:00, please check back for more details.</p>
+				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
 			<section class="event group">
@@ -114,7 +116,8 @@
 					</ol>
 				</div>
 				<img src="img/alliescabin.jpg" class="venue pull">
-				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. Show up, sit back, and enjoy the ride.</p>
+				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. The ceremony will begin as soon as everyone is up the mountain, around 6:30. Due to the capacity of Allie’s, there will be limited availability for seats during the ceremony. We promise to keep it short and sweet for those that will be standing! Dinner and dancing will follow the ceremony. The first sleigh back down the mountain will leave at 11:45pm.  Full details regarding the timing of shuttles will be provided to you when you check-in at The Christie Lodge. Show up, sit back, and enjoy the ride.</p>
+				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
 
@@ -128,19 +131,16 @@
 					</ol>
 				</div>
 				<img src="img/skistayplay.jpg" class="venue pull">
+				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a>, and others plan to go tubing down the <a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our Area Activities section for some ideas! Also, both Boulder and Denver are about 2&frac12; hours away and could be a wonderful addition to your vacation!</p>
+				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
-
-
-
-
-			
-			<p>*Allie’s Cabin and the Christie Lodge are both pet free and smoke free environments.</p>
 		</section>
+
 
 		<section id="attire">
 			<h4>Attire</h4>
 			<h5>What to Wear:</h5>
-			<p>March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your party shoes!</p>
+			<p class="justify">March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your party shoes!</p>
 		</section>
 
 		<section id="lodging">
@@ -154,12 +154,12 @@
 				1-888-325-6343<br>
 				Use Promotional Code: FSWED<br>
 			</p>	
-			<p>Important note: While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
+			<p class="justify">Important note: While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
 			<h5>The Christie Lodge has two options for our guests: </h5>
 			<h6>Option 1. <a href="http://www.christielodge.com/one-bedroom-suites/" target="_blank">One Bedroom Suites</a>:</h6>
-			<p>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</p>
+			<p class="justify">The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</p>
 			<h6>Option 2. <a href="http://www.christielodge.com/three-bedroom-suites/" target="_blank">Three Bedroom Suites</a>:</h6>
-			<p>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</p>
+			<p class="justify">The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</p>
 		</section>
 
 		<section id="transportation">
@@ -167,19 +167,18 @@
 			<h5>Flying in?</h5>
 			<p>Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).</p>
 			<h5>Don’t want to drive?</h5>
-			<p>We recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events.</p>
+			<p class="justify">We recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events.</p>
 			<h5>Up for a drive?</h5>
-			<p>If you choose to drive, parking is free at the Christie Lodge. It is about a 2 hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. </p>
+			<p class="justify">If you choose to drive, parking is free at the Christie Lodge. It is about a 2 hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. </p>
 			<h6>From Denver International Airport: </h6>
-			<p>Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. </p>
+			<p class="justify">Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. </p>
 			<h6>From Eagle County Airport:</h6>
-			<p>Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
+			<p class="justify">Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
 		</section>
 
 		<section id="activities" class="group">
 			<h4>Area Activities</h4>
 			<h5>Ski, Stay, & Play</h5>
-			<p>We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a>, and others plan to go tubing down the <a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a>. Interested? </p>
 			<div class="activity">
 				<h5>To Do:</h5>
 				<ul>
@@ -213,7 +212,7 @@
 				<h5>To Explore:</h5>
 				<ul>
 					<li><a href="http://www.visitavoncolorado.com/" target="_blank">Avon</a></li>
-					<li><a href="http://www.beavercreek.com/" target="_blank">Beaver Creek</a></li>
+					<li><a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a></li>
 					<li><a href="http://www.vail.com/" target="_blank">Vail</a></li>
 				</ul>
 			</div>
