updated amps and events section with links

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
 <nav data-scroll-header>
 	<ul class="group">
-		<li><a href="#story" data-scroll data-speed="1000">Our Story</a></li>
-		<li><a href="#events" data-scroll data-speed="1000">Wedding Events</a></li>
-		<li><a href="#attire" data-scroll data-speed="1000">Attire</a></li>
-		<li><a href="#lodging" data-scroll data-speed="1000">Lodging</a></li>
-		<li><a href="#transportation" data-scroll data-speed="1000">Transportation</a></li>
-		<li><a href="#activities" data-scroll data-speed="1000">Area Activities</a></li>
-		<li><a href="#registry" data-scroll data-speed="1000">Registry</a></li>
+		<li><a href="#story" data-scroll>Our Story</a></li>
+		<li><a href="#party" data-scroll>Wedding Party</a></li>
+		<li><a href="#events" data-scroll>Wedding Events</a></li>
+		<li><a href="#attire" data-scroll>Attire</a></li>
+		<li><a href="#lodging" data-scroll>Lodging</a></li>
+		<li><a href="#transportation" data-scroll>Transportation</a></li>
+		<li><a href="#activities" data-scroll>Area Activities</a></li>
+		<li><a href="#registry" data-scroll>Registry</a></li>
 	</ul>
 </nav>
 
@@ -40,7 +41,7 @@
 		</section>	
 			
 		<section id="party">
-			<h4>The Wedding Party</h4>
+			<h4>Wedding Party</h4>
 			<h6>Lori Sassali, <em>Officiant</em></h6>
 			<div class="group trial">
 				<div class="party-male">
@@ -66,7 +67,7 @@
 			<h4>Wedding Events</h4>
 			<div class="group">
 				<div class="overview pull">
-					<h3>Welcome Evening</h3>
+					<h3><a href="#welcomeevening" data-scroll>Welcome Evening</a></h3>
 					<ol>
 						<li>Thursday, March 5, 2015</li>
 						<li>The Christie Lodge</li>
@@ -74,7 +75,7 @@
 					</ol>
 				</div>
 				<div class="overview pull">
-					<h3>Wedding Day</h3>
+					<h3><a href="#weddingday" data-scroll>Wedding Day</a></h3>
 					<ol>
 						<li>Friday, March 6, 2015</li>
 						<li>Allie's Cabin</li>
@@ -82,7 +83,7 @@
 					</ol>
 				</div>
 				<div class="overview pull">
-					<h3>Ski, Stay, & Play</h3>
+					<h3><a href="#skistayplay" data-scroll>Ski, Stay, &#38; Play</a></h3>
 						<ol>
 							<li>Saturday, March 7, 2015</li>
 							<li>Vail Valley</li>
@@ -94,25 +95,27 @@
 
 			<section class="event group">
 				<div class="details pull">
-					<h5>Welcome Evening</h5>
+					<h5 id="welcomeevening">Welcome Evening</h5>
 					<ol>
 						<li>Thursday, March 5, 2015</li>
 						<li>The Christie Lodge</li>
 						<li>Time TBD</li>
+						<li>Casual Attire</li>
 					</ol>
 				</div>
-				<img src="img/christielodge.jpg" class="venue pull">
+				<img src="img/christielodgeinside.jpg" class="venue pull">
 				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. We are still working on the details, but we will definitely have catering from a local restaurant, board games, and of course, some libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives. This will likely start around 7:00, please check back for more details.</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
 			<section class="event group">
 				<div class="details pull">
-					<h5>Wedding Day</h5>
+					<h5 id="weddingday">Wedding Day</h5>
 					<ol>
 						<li>Friday, March 6, 2015</li>
 						<li>Allie's Cabin</li>
 						<li>Sleigh departs at 5:30pm</li>
+						<li>Creative Black Tie Optional</li>
 					</ol>
 				</div>
 				<img src="img/alliescabin.jpg" class="venue pull">
@@ -123,15 +126,14 @@
 
 			<section class="event group">
 				<div class="details pull">
-					<h5>Ski, Stay, & Play</h5>
+					<h5 id="skistayplay">Ski, Stay, &#38; Play</h5>
 					<ol>
 						<li>Saturday, March 7, 2015</li>
 						<li>Vail Valley</li>
-						<li>You are free all day</li>
 					</ol>
 				</div>
 				<img src="img/skistayplay.jpg" class="venue pull">
-				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a>, and others plan to go tubing down the <a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our Area Activities section for some ideas! Also, both Boulder and Denver are about 2&frac12; hours away and could be a wonderful addition to your vacation!</p>
+				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2&frac12; hours away and could be a wonderful addition to your vacation!</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 		</section>
@@ -178,7 +180,7 @@
 
 		<section id="activities" class="group">
 			<h4>Area Activities</h4>
-			<h5>Ski, Stay, & Play</h5>
+			<h5>Ski, Stay, &#38; Play</h5>
 			<div class="activity">
 				<h5>To Do:</h5>
 				<ul>
@@ -187,6 +189,7 @@
 					<li><a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Ice Skate</a></li>
 					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#crosscountry#Top" target="_blank">Cross Country Ski</a></li>
 					<li><a href="http://www.beavercreek.com/ski-and-snowboard-school/nordic-center.aspx#snowshoe#Top" target="_blank">Snowshoe</a></li>
+					<li><a href="http://www.beavercreek.com/activitiesdetail/bc+-+tubing.axd" target="_blank">Haymaker Tubing Hill</a></li>
 				</ul>
 			</div>
 			<div class="activity">
