added attire section content

--- a/index.html
+++ b/index.html
@@ -66,30 +66,38 @@
 		<section id="events">
 			<h4>Wedding Events</h4>
 			<div class="group">
-				<div class="overview pull">
-					<h3><a href="#welcomeevening" data-scroll>Welcome Evening</a></h3>
-					<ol>
-						<li>Thursday, March 5, 2015</li>
-						<li>The Christie Lodge</li>
-						<li>Time TBD</li>
-					</ol>
-				</div>
-				<div class="overview pull">
-					<h3><a href="#weddingday" data-scroll>Wedding Day</a></h3>
-					<ol>
-						<li>Friday, March 6, 2015</li>
-						<li>Allie's Cabin</li>
-						<li>Sleigh departs at 5:30pm</li>
-					</ol>
-				</div>
-				<div class="overview pull">
-					<h3><a href="#skistayplay" data-scroll>Ski, Stay, &#38; Play</a></h3>
+				<a href="#welcomeevening" data-scroll>
+					<div class="overview pull">
+						<h3>Welcome Evening</h3>
 						<ol>
-							<li>Saturday, March 7, 2015</li>
-							<li>Vail Valley</li>
-							<li>You are free all day</li>
+							<li>Thursday, March 5, 2015</li>
+							<li>The Christie Lodge</li>
+							<li>Time TBD</li>
 						</ol>
-				</div>
+					</div>
+				</a>
+
+				<a href="#weddingday" data-scroll>
+					<div class="overview pull">
+						<h3>Wedding Day</h3>
+						<ol>
+							<li>Friday, March 6, 2015</li>
+							<li>Allie's Cabin</li>
+							<li>Sleigh departs at 5:30pm</li>
+						</ol>
+					</div>
+				</a>
+
+				<a href="#skistayplay" data-scroll>
+					<div class="overview pull">
+						<h3>Ski, Stay, &#38; Play</h3>
+							<ol>
+								<li>Saturday, March 7, 2015</li>
+								<li>Vail Valley</li>
+								<li>You are free all day</li>
+							</ol>
+					</div>
+				</a>
 			</div>
 
 
@@ -98,12 +106,12 @@
 					<h5 id="welcomeevening">Welcome Evening</h5>
 					<ol>
 						<li>Thursday, March 5, 2015</li>
-						<li>The Christie Lodge</li>
+						<li><a href="#christielodge" data-scroll>The Christie Lodge</a></li>
 						<li>Time TBD</li>
 						<li>Casual Attire</li>
 					</ol>
 				</div>
-				<img src="img/christielodgeinside.jpg" class="venue pull">
+				<a href="#christielodge" data-scroll><img src="img/christielodgeinside.jpg" class="venue pull"></a>
 				<p class="justify">If you plan to arrive on Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. We are still working on the details, but we will definitely have catering from a local restaurant, board games, and of course, some libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives. This will likely start around 7:00, please check back for more details.</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
@@ -113,12 +121,12 @@
 					<h5 id="weddingday">Wedding Day</h5>
 					<ol>
 						<li>Friday, March 6, 2015</li>
-						<li>Allie's Cabin</li>
+						<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx">Allie's Cabin</a></li>
 						<li>Sleigh departs at 5:30pm</li>
 						<li>Creative Black Tie Optional</li>
 					</ol>
 				</div>
-				<img src="img/alliescabin.jpg" class="venue pull">
+				<a  href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx"><img src="img/alliescabin.jpg" class="venue pull"></a>
 				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. The ceremony will begin as soon as everyone is up the mountain, around 6:30. Due to the capacity of Allie’s, there will be limited availability for seats during the ceremony. We promise to keep it short and sweet for those that will be standing! Dinner and dancing will follow the ceremony. The first sleigh back down the mountain will leave at 11:45pm.  Full details regarding the timing of shuttles will be provided to you when you check-in at The Christie Lodge. Show up, sit back, and enjoy the ride.</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
@@ -129,10 +137,10 @@
 					<h5 id="skistayplay">Ski, Stay, &#38; Play</h5>
 					<ol>
 						<li>Saturday, March 7, 2015</li>
-						<li>Vail Valley</li>
+						<li><a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx">Vail Valley</a></li>
 					</ol>
 				</div>
-				<img src="img/skistayplay.jpg" class="venue pull">
+				<a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx"><img src="img/skistayplay.jpg" class="venue pull"></a>
 				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2&frac12; hours away and could be a wonderful addition to your vacation!</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
@@ -141,14 +149,25 @@
 
 		<section id="attire">
 			<h4>Attire</h4>
-			<h5>What to Wear:</h5>
-			<p class="justify">March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your party shoes!</p>
+			<h3>What to Wear:</h3>
+			<p class="justify">March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your dancing shoes!</p>
+			<p class="left"><em>Thursday</em> and <em>Saturday</em> are <strong>Casual</strong>. Dress comfortably, but look nice.</p>
+			<dl>
+				<dt><em>Friday</em> (our wedding day) is <strong>Creative Black Tie Optional</strong>. What does this mean? Basically, have some fun with your formal wear. See below for suggestions:</dt>
+				<dd><em>Women:</em>  Floor-length gown, knee-length cocktail dress, your dressiest little black dress, a dressy suit or dressy separates. Have fun with accessories – don’t be afraid of bright colors!</dd>
+				<dd><em>Men:</em>  Dark suit or tux with a colored or patterned bow tie and some fun cuff links!</dd>
+			</dl>
+
+
+
+
+
 		</section>
 
 		<section id="lodging">
 			<h4>Lodging</h4>
 			<h5>The Bride &amp; Groom will be staying at:</h5>
-			<p>
+			<p id="christielodge">
 				<a href="http://www.christielodge.com/" target="_blank">The Christie Lodge</a><br>
 				47 East Beaver Creek Boulevard<br>
 				Avon, Colorado 81620<br>
