changed descriptions of male attire

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<li>Thursday, March 5, 2015</li>
 						<li><a href="#christielodge" data-scroll>The Christie Lodge</a></li>
 						<li>Time TBD</li>
-						<li>Casual Attire</li>
+						<li><a href="#attire">Casual Attire</a></li>
 					</ol>
 				</div>
 				<a href="#christielodge" data-scroll><img src="img/christielodgeinside.jpg" class="venue pull"></a>
@@ -123,7 +123,7 @@
 						<li>Friday, March 6, 2015</li>
 						<li><a href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx">Allie's Cabin</a></li>
 						<li>Sleigh departs at 5:30pm</li>
-						<li>Creative Black Tie Optional</li>
+						<li><a href="#attire" data-scroll>Creative Black Tie Optional</a></li>
 					</ol>
 				</div>
 				<a  href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx"><img src="img/alliescabin.jpg" class="venue pull"></a>
@@ -151,11 +151,11 @@
 			<h4>Attire</h4>
 			<h3>What to Wear:</h3>
 			<p class="justify">March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your dancing shoes!</p>
-			<p class="left"><em>Thursday</em> and <em>Saturday</em> are <strong>Casual</strong>. Dress comfortably, but look nice.</p>
+			<p class="left"><em>Thursday</em> and <em>Saturday</em> are <strong>Casual</strong>. Dress comfortably.</p>
 			<dl>
-				<dt><em>Friday</em> (our wedding day) is <strong>Creative Black Tie Optional</strong>. What does this mean? Basically, have some fun with your formal wear. See below for suggestions:</dt>
+				<dt><em>Friday</em> (our wedding day) is <strong>Creative Black Tie Optional</strong>. Basically, have some fun with your formal wear. See below for suggestions:</dt>
 				<dd><em>Women:</em>  Floor-length gown, knee-length cocktail dress, your dressiest little black dress, a dressy suit or dressy separates. Have fun with accessories – don’t be afraid of bright colors!</dd>
-				<dd><em>Men:</em>  Dark suit or tux with a colored or patterned bow tie and some fun cuff links!</dd>
+				<dd><em>Men:</em>  Definitely rock a dark suit or maybe even a tux. Get creative with a colored or patterned dress shirt, tie, or bow tie. Maybe add some interesting accessories: cuff links, tie clip, pocket square, or watch!</dd>
 			</dl>
 
 
