--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 			<p class="justify">March is Colorado’s snowiest month, and Allie’s Cabin is only accessible by sleigh. Be sure to wear your coat, bring snow boots, and don’t forget your mittens! There is a boot room in the cabin where you can store your warm clothes and change into your dancing shoes!</p>
 			<p class="left"><em>Thursday</em> and <em>Saturday</em> are <strong>Casual</strong>. Dress comfortably.</p>
 			<dl>
-				<dt><em>Friday</em> (our wedding day) is <strong>Creative Black Tie Optional</strong>. Basically, have some fun with your formal wear. See below for suggestions:</dt>
-				<dd><em>Women:</em>  Floor-length gown, knee-length cocktail dress, your dressiest little black dress, a dressy suit or dressy separates. Have fun with accessories – don’t be afraid of bright colors!</dd>
-				<dd><em>Men:</em>  Definitely rock a dark suit or maybe even a tux. Get creative with a colored or patterned dress shirt, tie, or bow tie. Maybe add some interesting accessories: cuff links, tie clip, pocket square, or watch!</dd>
+				<dt><em>Friday</em> (our wedding day) is <strong>Creative Black Tie Optional</strong>. Basically, have some fun with your formal wear. We have a <em>little</em> 'Gatsby' thing going on so feel free to embrace it. Think rustic glam. See below for suggestions:</dt>
+				<dd><em>Women:</em> Have fun with accessories and don’t be afraid of bright colors! Wear a floor-length gown, knee-length cocktail dress, your dressiest little black dress, a dressy suit, or dressy separates. Whatever you wear, add some <em>flair!</em></dd>
+				<dd><em>Men:</em>  Definitely rock a dark suit or maybe even a tux. Get creative with a colored or patterned dress shirt, tie, or bow tie. Maybe add some interesting accessories: cuff links, tie clip, pocket square, watch, or your best fedora! Wear whatever shoes you want <em>(and you know how I feel about socks)</em>.</dd>
 			</dl>
 
 
