--- a/index.html
+++ b/index.html
@@ -166,21 +166,34 @@
 
 		<section id="lodging">
 			<h4>Lodging</h4>
-			<h5>The Bride &amp; Groom will be staying at:</h5>
-			<p id="christielodge">
-				<a href="http://www.christielodge.com/" target="_blank">The Christie Lodge</a><br>
-				47 East Beaver Creek Boulevard<br>
-				Avon, Colorado 81620<br>
-				<a href="http://www.christielodge.com/" target="_blank">www.christielodge.com</a><br>
-				1-888-325-6343<br>
-				Use Promotional Code: FSWED<br>
-			</p>	
-			<p class="justify">Important note: While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
-			<h5>The Christie Lodge has two options for our guests: </h5>
-			<h6>Option 1. <a href="http://www.christielodge.com/one-bedroom-suites/" target="_blank">One Bedroom Suites</a>:</h6>
-			<p class="justify">The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</p>
-			<h6>Option 2. <a href="http://www.christielodge.com/three-bedroom-suites/" target="_blank">Three Bedroom Suites</a>:</h6>
-			<p class="justify">The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</p>
+			<h3 id="christielodge"><a href="http://www.christielodge.com/">The Christie Lodge</a></h3>
+			<a href="http://www.christielodge.com/"><img src="img/christielodgesign.jpg" class="lodge"></a>
+			
+			<p>
+				<a href="https://www.google.com/maps/place/The+Christie+Lodge/@39.635169,-106.52112,17z/data=!3m1!4b1!4m2!3m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77?hl=en">
+					47 East Beaver Creek Boulevard<br>
+					Avon, Colorado 81620
+				</a>
+			</p>
+			
+			<p>
+				<a href="http://www.christielodge.com/">www.christielodge.com</a></br>
+				<a href="tel:1-970-845-4546">1.970.845.4546</a><br>
+				Use Promotional Code: FSWED
+			</p>
+			<p class="justify"><em>Important note:</em> While it may seem early, March is high season in Colorado for skiing, and the Christie Lodge books up early! We recommend you book your room for our wedding no later than September 30, 2014.</p>
+			<h6>The Christie Lodge has two options for our guests:</h6>
+			<dl class="option">
+				<dt><a href="http://www.christielodge.com/one-bedroom-suites/" target="_blank"><em>Option 1 - </em>One Bedroom Suites:</a>
+				<dt>
+
+				<dd>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</dd>
+
+				<dt><a href="http://www.christielodge.com/three-bedroom-suites/" target="_blank"><em>Option 2 - </em>Three Bedroom Suites:</a></dt>
+
+				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</dd>
+			</dl>
+			<p>If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
 		</section>
 
 		<section id="transportation">
