updated transportation section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</ol>
 				</div>
 				<a  href="http://www.beavercreek.com/groups/group-venues/allies-cabin.aspx"><img src="img/alliescabin.jpg" class="venue pull"></a>
-				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. The ceremony will begin as soon as everyone is up the mountain, around 6:30. Due to the capacity of Allie’s, there will be limited availability for seats during the ceremony. We promise to keep it short and sweet for those that will be standing! Dinner and dancing will follow the ceremony. The first sleigh back down the mountain will leave at 11:45pm.  Full details regarding the timing of shuttles will be provided to you when you check-in at The Christie Lodge. Show up, sit back, and enjoy the ride.</p>
+				<p class="justify">The ceremony and reception will both take place at Allie’s Cabin on Beaver Creek Mountain. A shuttle will be available to take guests from The Christie Lodge to Beaver Creek where a sleigh will pick you up. You’ll have the same service on the way back home. The ceremony will begin as soon as everyone is up the mountain, around 6:30. Due to the capacity of Allie’s, there will be limited availability for seats during the ceremony. We promise to keep it short and sweet for those that will be standing! Dinner and dancing will follow the ceremony. The first sleigh back down the mountain will leave at 11:45pm. Full details regarding the timing of shuttles will be provided to you when you check-in at The Christie Lodge. Show up, sit back, and enjoy the ride.</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
@@ -141,7 +141,7 @@
 					</ol>
 				</div>
 				<a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx"><img src="img/skistayplay.jpg" class="venue pull"></a>
-				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2&frac12; hours away and could be a wonderful addition to your vacation!</p>
+				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/" target="_blank">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx" target="_blank">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx" target="_blank">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2 hours away and could be a wonderful addition to your vacation!</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 		</section>
@@ -186,28 +186,26 @@
 			<dl class="option">
 				<dt><a href="http://www.christielodge.com/one-bedroom-suites/" target="_blank"><em>Option 1 - </em>One Bedroom Suites:</a>
 				<dt>
-
 				<dd>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.  $159.00 per night, 2 night minimum.</dd>
-
 				<dt><a href="http://www.christielodge.com/three-bedroom-suites/" target="_blank"><em>Option 2 - </em>Three Bedroom Suites:</a></dt>
-
-				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</dd>
+				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, three bathrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12. $339 per night, 3 night minimum.</dd>
 			</dl>
 			<p>If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
 		</section>
 
 		<section id="transportation">
 			<h4>Transportation</h4>
-			<h5>Flying in?</h5>
-			<p>Guests from out of town should plan to fly in to either Denver International Airport (DEN) or Eagle County Airport (EGE).</p>
-			<h5>Don’t want to drive?</h5>
-			<p class="justify">We recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare! The trip from DIA to the lodge is about 2 hours, and from EGE is about 30 minutes. Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events.</p>
-			<h5>Up for a drive?</h5>
-			<p class="justify">If you choose to drive, parking is free at the Christie Lodge. It is about a 2 hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. </p>
-			<h6>From Denver International Airport: </h6>
+			<p class="justify">Guests from out of town should plan to fly in to either Denver International Airport <em>(Airport Code: DEN)</em> or Eagle County Regional Airport <em>(Airport Code: EGE)</em>.</p>
+
+			<p class="justify">If you would like to take a shuttle, we recommend Colorado Mountain Express for your trip to and from the airport. Mention that you are in town for a wedding and receive 20% off of your fare!</p>
+
+			<p class="justify">If you would like to rent a vehicle, both Denver International and Eagle County offer rental care services. It is about a 2&frac12; hour drive from Denver International Airport, and about a 30 minute drive from Eagle County Airport. If you rent a car or decide to drive, The Christie Lodge offers free parking.</p>
+			<h6><a href="https://www.google.com/maps/dir/Denver+International+Airport,+8500+Pe%C3%B1a+Blvd,+Denver,+CO+80249/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.8480298,-105.5971769,8z/am=t/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x876c7f2a98ff44ff:0x49583bb435b59c6a!2m2!1d-104.673737!2d39.856098!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169">Directions from Denver International Airport: </a></h6>
 			<p class="justify">Follow the main road out of the airport. Join I-70 west towards “Grand Junction”. Follow I-70 west for approximately 110-120 miles to exit 167, “AVON”. Get off at exit 167 – Make a left turn (third exit) at the third main roundabout south of I-70, the one with the 4 large galloping horse sculptures in the center, and the Christie Lodge is on your left. </p>
-			<h6>From Eagle County Airport:</h6>
+			<h6><a href="https://www.google.com/maps/dir/Eagle+County+Regional+Airport,+219+Eldon+Wilson+Rd,+Gypsum,+CO+81637/The+Christie+Lodge,+47+E+Beaver+Creek+Blvd,+Avon,+CO+81620/@39.7162315,-106.715416,10z/am=t/data=!3m1!4b1!4m16!4m15!1m5!1m1!1s0x8741c0af58fb5911:0x8954a136d1d1d0db!2m2!1d-106.909712!2d39.640448!1m5!1m1!1s0x876a77c567f104e5:0xf11ca0cf9b121d77!2m2!1d-106.52112!2d39.635169!2m1!6e4!3e0">Directions from Eagle County Regional Airport:</a></h6>
 			<p class="justify">Turn right out of the airport area and travel east on US-6. Turn left onto Eby Creek Road. Take I-70 E towards Denver. Exit 167/Avon. Turn right at the bottom of the exit ramp. The Christie Lodge will be on the left at 47 East Beaver Creek Boulevard. Exit three-fourths of the way around the roundabout to reach the entrance. </p>
+
+			<p class="justify">Once you arrive at The Christie Lodge, there is a complimentary shuttle to and from Beaver Creek Village, Vail Mountain and around downtown Avon. There are also complimentary shuttles within each of those areas. On the day of the wedding, we will provide transportation for you to and from the wedding events.</p>
 		</section>
 
 		<section id="activities" class="group">
